# multithreadTracker

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  main.h
src/analyzer/: analyzer.c  analyzer.h
src/os/: analyzer_thread.c  printer_thread.c  reader_thread.c  watchdog_thread.c
src/printer/: printer.c  printer.h
src/queue/: queue.c  queue.h
src/reader/: reader.c  reader.h
src/utilities/: utilities.c  utilities.h
test/: testModel.c
